--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.14",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
     "ai": "^4.0.29",
+    "mongodb": "^6.12.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
