--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ai": "^4.0.29",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1"
