--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "ai": "^4.0.29",
+    "bcrypt": "^5.1.1",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
     "nodemailer": "^6.10.0",
