--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "ai": "^4.0.29",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
     "nodemailer": "^6.10.0",
+    "openai": "^4.83.0",
+    "puppeteer": "^24.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "postcss": "^8",
