--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "tinycolor2": "^1.6.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
