--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
     "nodemailer": "^6.10.0",
     "openai": "^4.83.0",
+    "pdf-parse": "^1.1.1",
     "puppeteer": "^24.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
