--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-toastify": "^11.0.3",
+    "rehype-raw": "^7.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tinycolor2": "^1.6.0",
