--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
