--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
+    "next-cors": "^1.0.0",
     "nodemailer": "^6.10.0",
     "openai": "^4.83.0",
     "pdf-parse": "^1.1.1",
