--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.2.0",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-toastify": "^11.0.3",
