--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@paypal/react-paypal-js": "^8.8.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "ai": "^4.0.29",
