--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
+    "react-gtm-module": "^2.0.11",
     "react-hubspot-form": "^1.3.7",
     "react-markdown": "^9.0.1",
     "react-toastify": "^11.0.3",
