--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@next/third-parties": "^15.2.3",
     "@paypal/react-paypal-js": "^8.8.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -37,7 +38,6 @@
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
-    "react-gtm-module": "^2.0.11",
     "react-hubspot-form": "^1.3.7",
     "react-markdown": "^9.0.1",
     "react-toastify": "^11.0.3",
