--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hubspot-form": "^1.3.7",
     "react-markdown": "^9.0.1",
     "react-toastify": "^11.0.3",
